feat: onboarding, save profiles, and save path switching
Onboarding & Empty States:
- Add 4-page welcome dialog shown on first launch (welcome, games grid,
  toolbar guide, finish page with shortcut cards)
- Add empty-state placeholders for game list and backup list using
  QStackedWidget with centered muted text and icons
- Add app_settings key-value table (schema v3) to persist onboarding state

Async Manifest Loading & Game Cache:
- Move manifest YAML parsing to background thread via QtConcurrent
- Add detected_games.json cache for instant startup from cached results
- Extract populateGameTree() from loadGames() for reuse with cached data
- Status bar shows loading indicator during background manifest parse

Save Profiles (per-slot backups):
- Add SaveProfile struct and save_profiles database table (schema v4)
- Add ProfileDetector with heuristic slot detection (numbered files,
  numbered directories, common naming patterns)
- Add ProfileDialog for managing profiles (auto-detect, add, edit, delete)
- Extend BackupDialog with profile combo box when profiles exist
- Extend SaveManager with compressFiles() for selective tar and
  restoreProfileBackup() for in-place extraction
- Backup metadata records profile name/id for display and restore logic
- Backup list shows [ProfileName] tag on profile-specific backups
- Restore confirmation distinguishes full vs profile restores
- Right-click game context menu: Manage Profiles...

Save Path Switching (native/Proton):
- Collect all valid save paths during detection (both native and Proton)
  instead of stopping at first match
- Add alternativeSavePaths field to GameInfo for non-primary paths
- Persist user path overrides in app_settings as JSON
- Right-click game context menu: Switch Save Path submenu showing
  current path (checked) and clickable alternatives
- Override applied on next detection cycle, survives app restarts

New files:
- src/core/profiledetector.{h,cpp}
- src/ui/onboardingdialog.{h,cpp}
- src/ui/profiledia

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
 # Find Qt6 packages
-find_package(Qt6 REQUIRED COMPONENTS Core Widgets Network Sql)
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets Network Sql Concurrent)
 find_package(yaml-cpp REQUIRED)
 
 # Source files
@@ -20,6 +20,7 @@ set(SOURCES
     src/core/gameinfo.cpp
     src/core/database.cpp
     src/core/savemanager.cpp
+    src/core/profiledetector.cpp
     # Steam
     src/steam/steamutils.cpp
     src/steam/manifestmanager.cpp
@@ -32,6 +33,8 @@ set(SOURCES
     src/ui/addgamedialog.cpp
     src/ui/gameconfigdialog.cpp
     src/ui/gameicon.cpp
+    src/ui/onboardingdialog.cpp
+    src/ui/profiledialog.cpp
 )
 
 set(HEADERS
@@ -39,6 +42,7 @@ set(HEADERS
     src/core/gameinfo.h
     src/core/database.h
     src/core/savemanager.h
+    src/core/profiledetector.h
     # Steam
     src/steam/steamutils.h
     src/steam/manifestmanager.h
@@ -51,6 +55,8 @@ set(HEADERS
     src/ui/addgamedialog.h
     src/ui/gameconfigdialog.h
     src/ui/gameicon.h
+    src/ui/onboardingdialog.h
+    src/ui/profiledialog.h
 )
 
 set(UI_FILES
@@ -79,6 +85,7 @@ target_link_libraries(${PROJECT_NAME}
     Qt6::Widgets
     Qt6::Network
     Qt6::Sql
+    Qt6::Concurrent
     yaml-cpp::yaml-cpp
 )
 
