chore: add local CHANGELOG.md workflow and update CLAUDE.md
- Add CHANGELOG.md to .gitignore (local dev changelog, not tracked)
- Update CLAUDE.md: commit workflow rules (always ask before committing,
  keep CHANGELOG.md updated, use it for commit messages and releases)
- Update CLAUDE.md: reflect current schema v4, new files
  (profiledetector, onboardingdialog, profiledialog), Qt6::Concurrent dep

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ compile_commands.json
 
 # Testing artifacts
 test-backups/
+
+# Dev changelog (parsed into release notes, not tracked in git)
+CHANGELOG.md
