feat: add 9 new features for v0.2.0
- Async backup/restore with progress bar (QProcess-based)
- Search/filter on game list (Ctrl+F, real-time filtering)
- Last backup timestamp on game cards
- Settings dialog (compression, backup dir, tray, auto-backup)
- Backup notes editing via context menu
- Bulk backup (Back Up All) with game selection dialog
- Orphaned backup detection (Undetected category)
- Backup integrity verification (tar -tzf)
- System tray with auto-backup via QFileSystemWatcher

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ set(SOURCES
     src/ui/gameicon.cpp
     src/ui/onboardingdialog.cpp
     src/ui/profiledialog.cpp
+    src/ui/settingsdialog.cpp
+    src/ui/bulkbackupdialog.cpp
 )
 
 set(HEADERS
@@ -57,6 +59,8 @@ set(HEADERS
     src/ui/gameicon.h
     src/ui/onboardingdialog.h
     src/ui/profiledialog.h
+    src/ui/settingsdialog.h
+    src/ui/bulkbackupdialog.h
 )
 
 set(UI_FILES
