--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
         run: cmake --build build --parallel $(nproc)
 
       - name: Test
+        env:
+          QT_QPA_PLATFORM: offscreen
         run: cd build && ctest --output-on-failure
 
   static-analysis:
@@ -57,5 +59,6 @@ jobs:
             --error-exitcode=1 \
             --suppress=missingIncludeSystem \
             --suppress=unmatchedSuppression \
+            --suppress=unknownMacro \
             -I src/core -I src/steam -I src/ui -I src \
             src/
