--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,8 @@ jobs:
         run: cmake --build build --parallel $(nproc)
 
       - name: Test
+        env:
+          QT_QPA_PLATFORM: offscreen
         run: cd build && ctest --output-on-failure
 
       - name: Package
