fix(ci): suppress cppcheck useInitializationList for Qt classes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,5 +60,6 @@ jobs:
             --suppress=missingIncludeSystem \
             --suppress=unmatchedSuppression \
             --suppress=unknownMacro \
+            --suppress=useInitializationList \
             -I src/core -I src/steam -I src/ui -I src \
             src/
