feat: add Windows support and modern UI theme
Windows integration:
- Steam path detection via Windows registry (HKLM/HKCU)
- Native Windows save path resolution (AppData, LocalAppData, Documents, etc.)
- Platform conditionals in GameDetector (Windows paths vs Linux/Proton)
- Platform guards for .desktop file loading and Steam path fallbacks
- SIGTERM handler wrapped in #ifndef Q_OS_WIN

Backup system:
- Replace all tar/QProcess invocations with libarchive C API
- Sync methods use archive_write/archive_read directly
- Async methods use QtConcurrent::run + QFutureWatcher
- Backward compatible with existing .tar.gz archives

UI theme:
- Custom Fusion dark palette for Windows and non-DE Linux
- Modern stylesheet: rounded corners, thin scrollbars, styled spinbox/combobox
  arrows, custom checkboxes, clean table headers, rounded menus
- 19 bundled SVG/PNG fallback icons (including arrows, checkbox check)
- AppStyle::icon() helper replacing all QIcon::fromTheme() calls
- Q_INIT_RESOURCE for static library resource initialization

CI:
- Added Windows build job (MSYS2/MinGW64) to CI and release workflows
- Added libarchive to Linux CI dependencies
- Release workflow produces Windows .zip with bundled DLLs

Build:
- Added LibArchive dependency to CMakeLists.txt
- Added style.h/cpp and icons.qrc to build
- Version bumped to 0.4.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  build-and-test:
-    name: Build & Test
+  build-and-test-linux:
+    name: Build & Test (Linux)
     runs-on: ubuntu-24.04
 
     steps:
@@ -23,7 +23,8 @@ jobs:
             g++ \
             qt6-base-dev \
             libgl1-mesa-dev \
-            libyaml-cpp-dev
+            libyaml-cpp-dev \
+            libarchive-dev
 
       - name: Configure
         run: cmake -B build -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTS=ON
@@ -35,6 +36,34 @@ jobs:
         env:
           QT_QPA_PLATFORM: offscreen
         run: cd build && ctest --output-on-failure
+
+  build-windows:
+    name: Build (Windows)
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install MSYS2
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: MINGW64
+          update: true
+          install: >-
+            mingw-w64-x86_64-cmake
+            mingw-w64-x86_64-gcc
+            mingw-w64-x86_64-qt6-base
+            mingw-w64-x86_64-yaml-cpp
+            mingw-w64-x86_64-libarchive
+
+      - name: Configure
+        shell: msys2 {0}
+        run: cmake -B build -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Release
+
+      - name: Build
+        shell: msys2 {0}
+        run: cmake --build build --parallel $(nproc)
 
   static-analysis:
     name: Static Analysis
@@ -50,7 +79,8 @@ jobs:
           sudo apt-get install -y \
             cppcheck \
             qt6-base-dev \
-            libyaml-cpp-dev
+            libyaml-cpp-dev \
+            libarchive-dev
 
       - name: Run cppcheck
         run: |
